--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
-    compile project(':QRGenearator')
+//    compile project(':QRGenearator')
+    compile 'androidmads.library.qrgenearator:QRGenearator:1.0.0'
 }
