--- a/QRGenearator/src/main/AndroidManifest.xml
+++ b/QRGenearator/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
-        android:allowBackup="false"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
+        android:label="@string/app_name">
 
     </application>
 
