--- a/QRGenearator/src/main/AndroidManifest.xml
+++ b/QRGenearator/src/main/AndroidManifest.xml
@@ -3,10 +3,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <application
-        android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
+    <application>
 
     </application>
 
