--- a/QRGenearator/build.gradle
+++ b/QRGenearator/build.gradle
@@ -3,15 +3,15 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'androidmads.library.qrgenearator' // Change this to match your package name
-version = '1.0.3' // Change this to match your version number
+version = '1.0.4' // Change this to match your version number
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion 14
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    compile 'com.google.zxing:core:3.2.0'
+    implementation 'com.google.zxing:core:3.2.0'
 }
 
 Properties properties = new Properties()
@@ -38,10 +38,10 @@ bintray {
         name = 'androidmads.library.qrgenearator'
 
         version {
-            name = '1.0.3'
+            name = '1.0.4'
             desc = 'QR Generator Library'
             released = new Date()
-            vcsTag = '1.0.3'
+            vcsTag = '1.0.4'
         }
 
         licenses = ['Apache-2.0']
