2nd commit. Recreated main activity and added path to qr generator for contacts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".GenDataActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".GenQRActivity" />
+        <activity
+            android:name=".GenDataActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".GenQRActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
