--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,15 @@
 
 buildscript {
     repositories {
-        jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        google() // new which replace https://maven.google.com
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
-        classpath "com.github.dcendents:android-maven-gradle-plugin:1.4.1"
+        classpath 'com.android.tools.build:gradle:7.2.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,11 +19,12 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        google() // new which replace https://maven.google.com
+        mavenCentral()
     }
 }
 
