Fix for the issue 26 updated

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    implementation project(':QRGenearator')
+//    implementation project(':QRGenearator')
+    implementation 'com.github.androidmads:QRGenerator:1.0.0'
+
 }
