--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         }
         google() // new which replace https://maven.google.com
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.2'
@@ -25,6 +26,7 @@ allprojects {
         }
         google() // new which replace https://maven.google.com
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
